# atlas-rag-assistant

./: .gitignore  pyproject.toml
db/mongodb/: connect_to_mongodb.py  connect_to_mongodb_table.py
embedding/: embed_docs.py  run_vector_search.py
fetch/: get_atlassian_page_data.py  get_content.py  get_defails_to_json_and_txt.py  get_details_to_json_and_html.py  get_details_to_json_and_txt.py
fetching/: extract_metadata.py  get_details_to_json_and_html.py  get_resps_to_json_and_html.py  print_atlassian_page_html.py
llm_prompt_response/: main.py  process_test.py
parsing/: parse_confluence_storage.py  parse_list_to_markdown.py  parse_table_to_csv.py  parse_text_only_from_html.py
processing/: check.py  extract_metadata.py  generate_rag_objects.py  merge_llm_response_to_one_jsonl.py  merge_metadata_to_one_jsonl.py  merge_table_to_str.py  parse_html_to_pretty_one.py  parse_list_to_markdown.py  parse_table_to_csv.py  parse_text_only_from_html.py  parse_toc_to_map_str.py  process_processed_to_vector_content.py
