[project]
name = "projectinsighthub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "atlassian-python-api==4.0.7",
    "beautifulsoup4==4.14.3",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "comm==0.2.3",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "google-auth==2.41.1",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.2.3",
    "gspread==6.2.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httpx==0.28.1",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.12.0",
    "jmespath==1.0.1",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "numpy==2.3.5",
    "oauthlib==3.3.1",
    "openai==2.14.0",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pymongo==4.15.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.1",
    "wcwidth==0.2.14",
    "wrapt==2.0.1",
]
